 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-4853: Fetch inputs before starting outputs (rohini)

PIG-4847: POPartialAgg processing and spill improvements (rohini)

PIG-4840: Do not turn off UnionOptimizer for unsupported storefuncs in case of no vertex groups (rohini)

PIG-4843: Turn off combiner in reducer vertex for Tez if bags are in combine plan (rohini)

PIG-4796: Authenticate with Kerberos using a keytab file (nielsbasjes via daijy)

PIG-4817: Bump HTTP Logparser to version 2.4 (nielsbasjes via daijy)

PIG-4811: Upgrade groovy library to address MethodClosure vulnerability	(daijy)

PIG-4803: Improve performance of regex-based builtin functions (eyal via daijy)

PIG-4802: Autoparallelism should estimate less when there is combiner (rohini)

PIG-4761: Add more information to front end error messages (eyal via daijy)

PIG-4792: Do not add java and sun system properties to jobconf (rohini)

PIG-4787: Log JSONLoader exception while parsing records (rohini)

PIG-4763: Insufficient check for the number of arguments in runpigmix.pl (sekikn via rohini)

PIG-4411: Support for vertex level configuration like speculative execution (rohini)

PIG-4775: Better default values for shuffle bytes per reducer (rohini)

PIG-4753: Pigmix should have option to delete outputs after completing the tests (mitdesai via rohini)

PIG-4744: Honor tez.staging-dir setting in tez-site.xml (rohini via daijy)

PIG-4742: Document Pig's Register Artifact Command added in PIG-4417 (akshayrai09 via daijy)

PIG-4417: Pig's register command should support automatic fetching of jars from repo (akshayrai09 via daijy)

PIG-4713: Document Bloom UDF (gliptak via daijy)
