@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-4862: POProject slow by creating StackTrace repeatedly (knoguchi)
+
 PIG-4853: Fetch inputs before starting outputs (rohini)
 
 PIG-4847: POPartialAgg processing and spill improvements (rohini)
